--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ selene>=2.0.0rc3.post3
 selenium~=4.10.0
 pytest==7.4.0
 allure-pytest==2.13.2
+testit-importer-allure==1.3.3
+testit-api-client==3.0.1
